doc: target to update POTs

--- a/doc/src/Makefile
+++ b/doc/src/Makefile
@@ -16,6 +16,10 @@ build-bundled: \
 	_build-bundled/fr_FR \
 	_build-bundled/manual.qrc
 
+update-prebuilt-manual: build-bundled
+	rm -rf ../build_html_embedded
+	cp -r _build-bundled ../build_html_embedded
+
 _build-html/%:
 	$(SPHINX_BUILD) -b html -Dlanguage=$* . $@
 
@@ -25,3 +29,7 @@ _build-bundled/%:
 
 _build-bundled/manual.qrc: manual.qrc
 	cp $< $@
+
+locale/pot:
+	$(SPHINX_BUILD) -b gettext . $@
+	$(PYGETTEXT) -d extra-doc-strings -p $@ extensions/*.py
