doc: target to update translations

--- a/doc/src/Makefile
+++ b/doc/src/Makefile
@@ -3,6 +3,14 @@ SPHINX_INTL := sphinx-intl
 PYGETTEXT := pygettext3
 QHELPGENERATOR := qhelpgenerator
 
+update-prebuilt-manual: build-bundled
+	rm -rf ../build_html_embedded
+	cp -r _build-bundled ../build_html_embedded
+
+update-translations: locale/pot
+	$(SPHINX_INTL) update
+	$(SPHINX_INTL) update-txconfig-resources
+
 build-html: \
 	_build-html/de_DE \
 	_build-html/en_US \
@@ -15,10 +23,6 @@ build-bundled: \
 	_build-bundled/es_ES \
 	_build-bundled/fr_FR \
 	_build-bundled/manual.qrc
-
-update-prebuilt-manual: build-bundled
-	rm -rf ../build_html_embedded
-	cp -r _build-bundled ../build_html_embedded
 
 _build-html/%:
 	$(SPHINX_BUILD) -b html -Dlanguage=$* . $@
@@ -33,3 +37,5 @@ _build-bundled/manual.qrc: manual.qrc
 locale/pot:
 	$(SPHINX_BUILD) -b gettext . $@
 	$(PYGETTEXT) -d extra-doc-strings -p $@ extensions/*.py
+
+.PHONY: update-prebuilt-manual update-translations
