Change mechanism for adding DLLs on windows

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -164,8 +164,7 @@ endif()
 
 if(WIN32)
     include(QtWin32Deploy)
-    qtwin32_deploy_modules(${BIN_INSTALL_DIR} qtwin32_Qt6Widgets qtwin32_Qt6Help)
-    qtwin32_deploy_default_qt_conf(${BIN_INSTALL_DIR})
+    win32deployqt(${APPLICATION_NAME}.exe)
 elseif(APPLE)
     include(MacdeployQt)
     macdeployqt(${APPLICATION_NAME}.app ${APPLICATION_NAME})
